[tool.poetry]
name = "blm_header"
version = "0.1.0"
description = "Brute force the LHC's BLM headers."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
]
readme = "README.md"
repository = 'https://github.com/loiccoyle/BLM_header'

[tool.poetry.dependencies]
python = "^3.6.1"
pytimber = "^3.0.0"
pandas = "^1.0.3"
numpy = "^1.18.3"

[tool.poetry.scripts]
blm_header = 'blm_header.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
