[tool.poetry]
name = "blm_header"
version = "1.1.2"
description = "Brute force the LHC's BLM headers."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
]
readme = "README.md"
repository = 'https://github.com/loiccoyle/blm_header'

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
pytimber = "^3.0.0"
pandas = "^1.0.3"
numpy = "^1.21.2"
tqdm = {version = "^4.45.0", optional = true}

[tool.poetry.extras]
progress = ['tqdm']

[tool.poetry.scripts]
blm_header = 'blm_header.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "accpy"
url = "http://acc-py-repo.cern.ch:8081/repository/vr-py-releases/simple"
default = true
